@@ -17,7 +17,7 @@ rxvt-unicode|rxvt-unicode terminal (X Window System),
 	cup=\E[%i%p1%d;%p2%dH, cuu=\E[%p1%dA, cuu1=\E[A, 
 	cvvis=\E[?25h, dch=\E[%p1%dP, dch1=\E[P, dl=\E[%p1%dM, 
 	dl1=\E[M, ed=\E[J, el=\E[K, el1=\E[1K,
-	flash=\E[?5h$<50/>\E[?5l, home=\E[H, hpa=\E[%i%p1%dG, ht=^I, 
+	flash=\E[?5h$<20/>\E[?5l, home=\E[H, hpa=\E[%i%p1%dG, ht=^I, 
 	hts=\EH, ich=\E[%p1%d@, ich1=\E[@, il=\E[%p1%dL, il1=\E[L, 
 	ind=^J, is1=\E[?47l\E=\E[?1l, 
 	is2=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l\E[4l, 
