@@ -610,4 +610,25 @@ rxvt_Draw_Triangle (Display *display, Window win, GC topShadow, GC botShadow, in
     }
 }
 #endif
+
+// should nto be use din interactive programs, for obvious reasons
+void rxvt_usleep (int usecs)
+{
+#if HAVE_NANOSLEEP
+  struct timespec ts;
+
+  ts.tv_sec = 0;
+  ts.tv_nsec = usecs * 1000;
+  nanosleep (&ts, NULL);
+#else                 
+  /* use select for timing */
+  struct timeval  tv;
+
+  tv.tv_sec = 0;
+  tv.tv_usec = usecs;
+  select (0, NULL, NULL, NULL, &tv);
+#endif                
+}
+
 /*----------------------- end-of-file (C source) -----------------------*/
+
